@@ -1,0 +1,15 @@
+.. currentmodule:: obspy.io.gcf
+.. automodule:: obspy.io.gcf
+
+    .. comment to end block
+
+    Modules
+    -------
+    .. autosummary::
+       :toctree: autogen
+       :nosignatures:
+
+       core
+       libgcf
+
+    .. comment to end block
